--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "packages": ["packages/*"],
-  "version": "5.0.0-beta.99",
+  "version": "0.0.1",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "noPush": true,
